@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Fixed issues with setViewPort method under OpenGL. (reported by anontypist)
 - Added support for fullscreen window manager on linux. Patch provided by Deve.
 - Fixed several selection, highlighting and clipping bugs in CGUITreeview (thx @ AReichl for the patch + test)
 - Removed DllMain from the static windows build (thx @ AReichl for reporting)
